# llm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  check.toml  docker-compose.yml  openapi.json  pyproject.toml  standards.toml
.github/workflows/: ci.yml  deploy.yml  generate-client.yml  publish-client.yml
.husky/: commit-msg  pre-push
client/: package.json
docs/plans/: 00-overview.md  01-project-setup.md  02-litellm-integration.md  03-instructor-integration.md  04-langfuse-observability.md  05-chromadb-rag.md  06-deepeval-testing.md
docs/research/: 04-observability.md  README.md
infra/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  pnpm-lock.yaml
scripts/: export_openapi.py
src/palindrom_ai/: __init__.py
src/palindrom_ai/llm/: __init__.py  completion.py  config.py  metrics.py  observability.py  structured.py
src/palindrom_ai/llm/eval/: __init__.py  batch.py  cli.py  evaluate.py
src/palindrom_ai/llm/rag/: __init__.py  embeddings.py  generate.py  vectorstore.py
src/palindrom_ai/llm/server/: app.py  models.py  routes.py
src/progression_labs/llm/: metrics.py
src/progression_labs/llm/server/: app.py
tests/: conftest.py  test_completion.py  test_eval.py  test_import.py  test_metrics.py  test_observability.py  test_prompts.py  test_rag.py  test_server.py  test_structured.py  test_vectorstore.py
tests/integration/: test_completion_integration.py  test_server_integration.py  test_structured_integration.py
tests/unit/: test_cli.py  test_completion.py  test_config.py  test_eval.py  test_metrics.py  test_observability.py  test_prompts.py  test_rag.py  test_server.py  test_structured.py
