[project]
name = "palindrom-ai-llm"
version = "0.1.0"
description = "Unified Python LLM SDK for Palindrom"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Palindrom AI" }]
dependencies = [
    "litellm>=1.55.0",
    "instructor>=1.7.0",
    "langfuse>=2.0.0,<3.0.0",  # Pin to v2 until LiteLLM supports v3
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5.0",
]
eval = [
    "deepeval>=2.0.0",
]
metrics = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "httpx>=0.25.0",
]
secrets = [
    "google-cloud-secret-manager>=2.0.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
all = [
    "palindrom-ai-llm[rag,eval,metrics,secrets,server]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a7",
    "google-cloud-secret-manager>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/palindrom_ai"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP047"]  # Allow TypeVar style (PEP 484) instead of requiring PEP 695 type params

[tool.ty]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
# litellm uses Pydantic extra='allow' which ty cannot resolve for attribute access.
# These are accessed via model_dump() where possible, but some warnings remain
# from chromadb and opentelemetry type resolution.
unresolved-attribute = "warn"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: tests that call real external APIs",
]
